# Harness-Cache

./: .gitignore  LICENSE  README.md  harness_cache_multi_agent_guidance_en.md  harness_cache_presentation.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: app.js  index.html  styles.css
examples/: __init__.py  demo_token_savings.py
harness_cache/: __init__.py  cache.py  coherence.py  events.py  metrics.py  models.py  source.py  workflow.py
plugins/harness-cache/.codex-plugin/: plugin.json
plugins/harness-cache/scripts/: run_demo.py
plugins/harness-cache/skills/harness-cache/: SKILL.md
tests/: test_harness_cache.py  test_plugin_packaging.py
